Dodani razni alarmi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,13 +47,20 @@
 
         </LinearLayout>
 
+    <Spinner
+        android:id="@+id/alarm_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"/>
+
     <TextView
         android:id="@+id/update_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginTop="50dp"
-        android:text="Alarm nije postavljen"
+        android:text=""
         android:layout_gravity="center"/>
 
 
