--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,5 +63,12 @@
         android:text=""
         android:layout_gravity="center"/>
 
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ponavljaj alarm"
+        android:layout_gravity="left"
+        android:onClick="itemClicked" />
 
 </LinearLayout>
