opcija promjene pozadine

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.sehorva.budilica.MainActivity">
-    <item android:id="@+id/action_settings" android:orderInCategory="100"
-        android:title="@string/action_settings" app:showAsAction="never" />
+    <item android:id="@+id/background_color"
+        android:orderInCategory="100"
+        android:title="@string/Boja_pozadine"
+        app:showAsAction="never" />
 </menu>
